plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.{
	maven {
		name = "Modrinth"
		url = "https://api.modrinth.com/maven"
	}
	maven { url = "https://masa.dy.fi/maven/sakura-ryoko" }
	maven { url = "https://maven.fallenbreath.me/releases" } // needed for conditional-mixin
	maven {
		name = "Terraformers"
		url = "https://maven.terraformersmc.com/"
	}
	mavenCentral()
}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	modCompileOnly "fi.dy.masa.litematica:litematica-fabric-1.21.11:0.26.2"
	modRuntimeOnly "fi.dy.masa.litematica:litematica-fabric-1.21.11:0.26.2"
	modCompileOnly "fi.dy.masa.malilib:malilib-fabric-1.21.11:0.27.7"
	modRuntimeOnly "fi.dy.masa.malilib:malilib-fabric-1.21.11:0.27.7"
	modImplementation "me.fallenbreath:conditional-mixin-fabric:0.6.4"

	modCompileOnly "maven.modrinth:modmenu:17.0.0"
	//modImplementation "maven.modrinth:jei:oHe0elMI"
	modImplementation "maven.modrinth:modmenu:17.0.0"

	
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}